--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ html {
   color: hsl(240, 100%, 99%);
   background-color: rgb(44, 38, 38);
 }
+table,tr,td,th,caption{
+border: 1px solid #eee ;
+font-family:'Courier New', Courier, monospace;
+border-collapse: collapse;
+padding: 0.5rem;
+}
