--- a/style.css
+++ b/style.css
@@ -8,3 +8,6 @@ font-family:'Courier New', Courier, monospace;
 border-collapse: collapse;
 padding: 0.5rem;
 }
+.Ngjyrat{
+  background-color: rgb(123, 73, rgb(0, 217, 255));
+}
