--- a/style.css
+++ b/style.css
@@ -8,6 +8,6 @@ font-family:'Courier New', Courier, monospace;
 border-collapse: collapse;
 padding: 0.5rem;
 }
-.Ngjyrat{
+div{
   background-color: rgb(123, 73, rgb(0, 217, 255));
 }
